# NanoPhotoSense

./: ABSTRAct.docx  ceva.txt
nanophotosense/: README.md  package-lock.json  pom.xml
nanophotosense-ui/: README.md  angular.json  package-lock.json  package.json
nanophotosense-ui/src/: index.html
nanophotosense-ui/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
nanophotosense-ui/src/app/api/: nanophotosense-api.models.ts  nanophotosense-api.service.ts
nanophotosense-ui/src/app/dashboard/: dashboard.component.html  dashboard.component.scss  dashboard.component.ts
nanophotosense/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native  Dockerfile.native-micro
nanophotosense/src/main/resources/: application.properties
nanophotosense/src/main/resources/db/migration/: V1__create_spectral_readings.sql  V2__create_alerts.sql  V3__create_sensor_config.sql
nanophotosense/src/main/resources/db/migration-h2/: V1__create_spectral_readings.sql  V2__create_alerts.sql  V3__create_sensor_config.sql
physics-model/: .gitignore  Dockerfile  README.md  pyproject.toml
physics-model/docs/: API_ENDPOINTS.md  ENDPOINTS_IMPLEMENTATION.md  IMPLEMENTATION.md  infiltration_profiles.md
physics-model/examples/: infiltration_demo.py  json_output_example.py
physics-model/src/: __init__.py  api.py  lspr_simulator.py  models.py  spectral_generator.py
physics-model/tests/: quick_api_test.py  test_api.py  test_api_endpoints.py  test_infiltration_quick.py  test_lspr_simulator.py
(+13 files in other folders)
